--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -32,6 +32,7 @@
           <li class="nav-item active">
           <div class="navbar-nav">
               {% if user.is_authenticated %}
+                <a class="nav-item nav-link" href="{% url 'post-create' %}">New Post</a>
                 <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                 <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
               {% else %}
@@ -46,6 +47,7 @@
   <main role="main" class="container">
     <div class="row">
       <div class="col-md-8">
+        <br>
         {% if messages %}
           {% for message in messages %}
             <div class="alert alert-{{ message.tags }}">
@@ -53,6 +55,7 @@
             </div>
           {% endfor %}
         {% endif %}
+        <br>
         {% block content %}{% endblock %}
       </div>
       <div class="col-md-4">
