--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -47,6 +47,7 @@
     </form>
 
     <p class="text--center">Not a member? <a href="{% url 'register' %}">Sign up now</a> <svg class="icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/icons.svg#arrow-right"></use></svg></p>
+    <p class="text--center">Forgot Password? Reset <a href="{% url 'password_reset' %}">Here</a> <svg class="icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/icons.svg#arrow-right"></use></svg></p>
 
   </div>
 
